Apply changes from tspoke/firebase-tools-issues-7500/vue-sample

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,14 @@
 {
-  "projects": {},
-  "targets": {},
-  "etags": {},
-  "dataconnectEmulatorConfig": {}
+  "projects": {
+    "production": "YOUR_PROJECT_ID"
+  },
+  "targets": {
+    "YOUR_PROJECT_ID": {
+      "hosting": {
+        "YOUR_PROJECT_ID": [
+          "YOUR_PROJECT_ID"
+        ]
+      }
+    }
+  }
 }
